--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
+    <title>DOM learning</title>
+    <style>
+      .bg-black {
+        background-color: #212121;
+        color: #fff;
+      }
+    </style>
+  </head>
+  <body class="bg-black">
+    <div>
+      <h1 id="title" class="heading">
+        DOM learning on Chai aur Code
+        <span style="display: none">test text</span>
+      </h1>
+      <h2>Lorem ipsum dolor sit 1.</h2>
+      <h2>Lorem ipsum dolor sit 2.</h2>
+      <h2>Lorem ipsum dolor sit 3.</h2>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <input type="password" name="" id="">
+
+      <ul>
+        <li class="test-item">one</li>
+        <li class="test-item">two</li>
+        <li class="test-item">three</li>
+        <li class="test-item">four</li>
+      </ul>
+    </div>
+  </body>
+</html>
